[package]
name = "easysync2"
version = "0.1.0"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
anyhow = { version = "1.0.53" }
